--- a/Momentum App/css/style.css
+++ b/Momentum App/css/style.css
@@ -1,25 +1,8 @@
-body {
-  background-size: cover;
-  background-position: center center;
-  animation: fadeIn 1s ease-in-out forwards;
-  animation-delay: 0.5s;
-  color: white;
-}
-
-.hidden {
-  display: none;
-}
-
-.clock {
-  font-size: 10em;
-}
-
-.date {
-  font-size: 2em;
-}
-
-button {
-  background: none;
-  border: none;
-  color: white;
-}
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import "main.css";
+@import "location.css";
+@import "clock.css";
+@import "weather.css";
+@import "left.css";
+@import "right.css";
+@import "todo.css";
