[momentum app] todo 체크 기능 추가

--- a/Momentum App/css/todo.css
+++ b/Momentum App/css/todo.css
@@ -8,10 +8,15 @@
 
 .todo-list {
   overflow: scroll;
-  height: 80%;
+  height: 70%;
 }
 
 .toDo__button {
   margin-right: 10px;
   cursor: pointer;
+}
+
+.done {
+  text-decoration: line-through;
+  color: rgba(255, 255, 255, 0.5);
 }
