[mometun app] 반응형 css추가

--- a/Momentum App/css/location.css
+++ b/Momentum App/css/location.css
@@ -5,9 +5,15 @@
   font-size: 12px;
   position: absolute;
   bottom: 25px;
-  left: 25px;
 }
 
 .location:hover {
   opacity: 1;
+}
+
+@media (max-width: 830px) {
+  .location {
+    position: inherit;
+    margin: 20px;
+  }
 }
