--- a/Momentum App/css/todo.css
+++ b/Momentum App/css/todo.css
@@ -20,3 +20,9 @@
   text-decoration: line-through;
   color: rgba(255, 255, 255, 0.5);
 }
+
+@media (max-width: 830px) {
+  .toDo {
+    font-size: 18px;
+  }
+}
