--- a/Momentum App/css/clock.css
+++ b/Momentum App/css/clock.css
@@ -6,3 +6,13 @@
   font-size: 15px;
   margin-bottom: 20px;
 }
+
+@media (max-width: 830px) {
+  .clock {
+    font-size: 5em;
+    margin: 30px;
+  }
+  .date {
+    font-size: 13px;
+  }
+}
