--- a/Momentum App/css/main.css
+++ b/Momentum App/css/main.css
@@ -1,6 +1,6 @@
 body,
 html {
-  overflow: hidden;
+  overflow: scroll;
   height: 100%;
   width: 100%;
   margin: 0;
@@ -77,4 +77,13 @@ button {
   border: none;
   color: rgb(148, 148, 148);
   cursor: pointer;
+}
+
+@media (max-width: 830px) {
+  body {
+    flex-direction: column;
+  }
+  input {
+    font-size: 14px;
+  }
 }
