--- a/Momentum App/css/right.css
+++ b/Momentum App/css/right.css
@@ -2,8 +2,21 @@
   width: 50%;
   height: 50%;
   background: rgba(0, 0, 0, 0.4);
-  margin: 30px;
-  margin-right: 60px;
   padding: 30px;
+  margin-top: 10px;
+  margin-right: 30px;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media (max-width: 830px) {
+  .right {
+    flex: 2;
+    margin-right: 0;
+  }
+  input {
+    width: 100%;
+  }
 }
