[momentum app] css 수정

--- a/css/left.css
+++ b/css/left.css
@@ -34,6 +34,12 @@
   display: none;
 }
 
+.left .user-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 830px) {
   .left {
     flex: 1;
